<?xml version="1.0"?>
<package format="2">
  <name>psen_scan_v2</name>
  <version>0.3.2</version>
  <description>ROS support for the Pilz laser scanner</description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="c.doehn@pilz.de">Christian Döhn</maintainer>
  <maintainer email="c.henkel@pilz.de">Christian Henkel</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>
  <maintainer email="r.feistenauer@pilz.de">Richard Feistenauer</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosfmt</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rosconsole_bridge</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>code_coverage</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>pilz_testutils</test_depend>
  <test_depend>rosbag</test_depend>

</package>
