<?xml version="1.0"?>
<package format="2">
  <name>psen_scan_v2</name>
  <version>0.10.2</version>
  <description>ROS support for the Pilz laser scanner</description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="c.doehn@pilz.de">Christian Döhn</maintainer>
  <maintainer email="c.henkel@pilz.de">Christian Henkel</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>
  <maintainer email="r.feistenauer@pilz.de">Richard Feistenauer</maintainer>

  <license>LGPLv3</license>
  
  <url type="bugtracker">https://github.com/PilzDE/psen_scan_v2/issues</url>
  <url type="repository">https://github.com/PilzDE/psen_scan_v2</url>
  
  <author>Pilz GmbH + Co. KG</author>



  <buildtool_depend>catkin</buildtool_depend>
  <depend>fmt</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rosconsole_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <build_depend>tinyxml2</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tinyxml2</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>code_coverage</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rosbag</test_depend>

  <build_export_depend>tinyxml2</build_export_depend>
</package>
