<?xml version="1.0"?>
<package format="3">
  <name>psen_scan_v2</name>
  <version>0.20.0</version>
  <description>ROS support for the Pilz laser scanner</description>

  <maintainer email="c.doehn@pilz.de">Christian Döhn</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>
  <maintainer email="r.feistenauer@pilz.de">Richard Feistenauer</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>fmt</depend>
  <depend>libboost-system-dev</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ros_testing</test_depend>

  <test_depend>ament_index_python</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_xml</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>rosbag2_cpp</test_depend>
  <test_depend>rosbag2_storage_default_plugins</test_depend>

  <test_depend>libconsole-bridge-dev</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
